fix dependency errors and rendering issues

--- a/client/index.html
+++ b/client/index.html
@@ -29,16 +29,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="build/bundle.js"></script>
-    <!-- <script>
-      $('#menu-toggle').click(function (e) {
-        e.preventDefault();
-        $('#wrapper').toggleClass('toggled');
-      });
-    </script> -->
-  </body>
-
-  <body>
-    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
